--- a/sample.html
+++ b/sample.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TODO</title>
+    <title>SAMPLE TODO</title>
     <link rel="stylesheet" href="sample.css">
 </head>
 <body>
-    <div class="container"></div>
+    <div class="container">
+        <div id="newtask">
+            <input type="text" placeholder="Task  to be done...">
+            <button id="push">Add</button>
+        </div>
+    </div>
 </body>
 </html>
